--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "Shikimori Micchon",
+      "name": "Kaguya Shinomiya",
       "description": "A Powerful Telegram group management bot with anime theme.",
       "keywords": [
          "telegram",
